--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 </head>
 <body>
   First web try
+  picsum image
     <img src="https://picsum.photos/200">
+    local image
+    <img src="images/coldview.jpg">
 </body>
 </html>
